--- a/Dogu Bolut/index.html
+++ b/Dogu Bolut/index.html
@@ -10,10 +10,12 @@
         <div id="seesaw-container">
             <div id="plank"></div>
         </div>
-        <div id="left-weight" class="display-item"></div>
-        <div id="tilt-angle" class="display-item"></div>
-        <div id="right-weight" class="display-item"></div>
-        
+        <div class="display-container">
+            <div id="left-weight" class="display-item">Left: 0 kg</div>
+            <div id="tilt-angle" class="display-item">Tilt: 0 deg</div>
+            <div id="right-weight" class="display-item">Right: 0 kg</div>
+        </div>
+        <button id="reset-button">Reset</button>
     </div>
     <script src="script.js"></script>
 </body>
