Local Storage, pivot added. Visual improvements

--- a/Dogu Bolut/index.html
+++ b/Dogu Bolut/index.html
@@ -9,10 +9,11 @@
     <div id="container">
         <div id="seesaw-container">
             <div id="plank"></div>
+            <div id="pivot"></div>
         </div>
         <div class="display-container">
             <div id="left-weight" class="display-item">Left: 0 kg</div>
-            <div id="tilt-angle" class="display-item">Tilt: 0 deg</div>
+            <div id="tilt-angle" class="display-item">Tilt: 0 °</div>
             <div id="right-weight" class="display-item">Right: 0 kg</div>
         </div>
         <button id="reset-button">Reset</button>
