--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seesaw</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Dogu-Bolut/style.css">
 </head>
 <body>
     <div id="container">
@@ -18,6 +18,6 @@
         </div>
         <button id="reset-button">Reset</button>
     </div>
-    <script src="script.js"></script>
+    <script src="Dogu-Bolut/script.js"></script>
 </body>
 </html>
